# Sparse_linear_systems_solver

./: CMakeLists.txt  CSR.cpp  SRJ.cu  jacobi.cu  jacobi.cuh  jacobi.h  jacobiCuda.cpp  jacobiCuda.h  kernels.cuh  main.cpp  main.cu  mv_multiplication.cuh  reduce.cuh  tests.cu  utilidades.cu  utilidades.h
data/: matrix1500.mtx
include/: CSR.h  SRJ.h  SRJ_CUDA.h  SRJ_OMP.h  cpu_seconds.h  csr_formatter.h  jacobi.h  jacobiCuda.h  jacobiOmp.h  readers.h  rhsVector_reader.h  utilidades.h
src/: CSR.cpp  SRJ.cpp  SRJ_CUDA.cu  SRJ_OMP.cpp  jacobi.cpp  jacobiCuda.cu  jacobiOmp.cpp  kernels.cuh  main.cpp  utilidades.cu
srjSch/: P10_100.srj  P10_1000.srj  P10_1024.srj  P10_128.srj  P10_150.srj  P10_200.srj  P10_250.srj  P10_256.srj  P10_300.srj  P10_32.srj  P10_350.srj  P10_400.srj  P10_450.srj  P10_500.srj  P10_512.srj  P10_550.srj  P10_575.srj  P10_585.srj  P10_590.srj  P10_600.srj  P10_64.srj  P10_650.srj  P10_700.srj  P10_750.srj  P10_800.srj  P10_850.srj  P10_900.srj  P10_950.srj  P11_100.srj  P11_1000.srj  P11_1024.srj  P11_128.srj  P11_150.srj  P11_200.srj  P11_250.srj  P11_256.srj  P11_300.srj  P11_32.srj  P11_350.srj  P11_400.srj  (+208 more)
tests/: algoritmos.cu  main.cpp  main.cu  matrices_test.cpp  matrices_test.h  tests.h  tests_csr.cpp  tests_cuda.cu  tests_jacobi.cu  tests_omp.cpp
